cmake_minimum_required(VERSION 3.13)
project(src C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(src
        adlist.c
        adlist.h
        ae.c
        ae.h
        ae_epoll.c
        ae_evport.c
        ae_kqueue.c
        ae_select.c
        anet.c
        anet.h
        aof.c
        asciilogo.h
        bio.c
        bio.h
        bitops.c
        blocked.c
        cluster.c
        cluster.h
        config.c
        config.h
        crc16.c
        crc64.c
        crc64.h
        db.c
        debug.c
        dict.c
        dict.h
        endianconv.c
        endianconv.h
        fmacros.h
        help.h
        hyperloglog.c
        intset.c
        intset.h
        lzf.h
        lzf_c.c
        lzf_d.c
        lzfP.h
        memtest.c
        multi.c
        networking.c
        notify.c
        object.c
        pqsort.c
        pqsort.h
        pubsub.c
        rand.c
        rand.h
        rdb.c
        rdb.h
        redis-benchmark.c
        redis-check-aof.c
        redis-check-dump.c
        redis-cli.c
        redis.c
        redis.h
        redisassert.h
        release.c
        replication.c
        rio.c
        rio.h
        scripting.c
        sds.c
        sds.h
        sentinel.c
        setproctitle.c
        sha1.c
        sha1.h
        slowlog.c
        slowlog.h
        solarisfixes.h
        sort.c
        syncio.c
        t_hash.c
        t_list.c
        t_set.c
        t_string.c
        t_zset.c
        testhelp.h
        util.c
        util.h
        version.h
        ziplist.c
        ziplist.h
        zipmap.c
        zipmap.h
        zmalloc.c
        zmalloc.h)
